fix overflow

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header a {color: #fff; border-color: #fff;}
 header img  {width: 200px; padding-right: 60px; position: relative;}
 header .container {padding: 80px 40px;}
 
-.container {width: 100%; clear: both;}
+.container {clear: both;}
 /*.container + .container {margin-top: 60px;}*/
 .container {padding: 60px 40px;}
 
